# memfiddle

./: .gitignore  CMakeLists.txt  COPYING
src/: CMakeLists.txt  main.c
