# Copyright (c) 2012 Florian Albrechtskirchinger. All rights reserved.
# 
# This file is part of memfiddle.
# 
# memfiddle is licensed under the Simplified BSD License (the "License").
# You should have received a copy of the License along with memfiddle.
# If not, see <http://www.opensource.org/licenses/bsd-license.php>.

cmake_minimum_required(VERSION "2.8")

project("memfiddle")

add_subdirectory("src")
